--- a/assets/scss/layouts/lookbooks/_spring-2015-lookbook.scss
+++ b/assets/scss/layouts/lookbooks/_spring-2015-lookbook.scss
@@ -1,32 +1,52 @@
-.spring-2015 {
+.spring-2015-lookbook {
   .lb-image-one {
-    background: url(spring-2015-image-one.jpg) no-repeat center center;
+    background: url(../img/lookbooks/spring-2015/image-one.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-two {
-    background: url(spring-2015-image-two.jpg) no-repeat center center;
+    background: url(../img/lookbooks/spring-2015/image-two.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-three {
-    background: url(spring-2015-image-three.jpg) no-repeat center center;
+    background: url(../img/lookbooks/spring-2015/image-three.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-four {
-    background: url(spring-2015-image-four.jpg) no-repeat center center;
+    background: url(../img/lookbooks/spring-2015/image-four.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-five {
-    background: url(spring-2015-image-five.jpg) no-repeat center center;
+    background: url(../img/lookbooks/spring-2015/image-five.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-six {
-    background: url(spring-2015-image-six.jpg) no-repeat center center;
+    background: url(../img/lookbooks/spring-2015/image-six.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
+  .lb-image-seven {
+    background: url(../img/lookbooks/spring-2015/image-seven.jpg) no-repeat center center;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  .lb-image-eight {
+    background: url(../img/lookbooks/spring-2015/image-eight.jpg) no-repeat center center;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  .lb-image-nine {
+    background: url(../img/lookbooks/spring-2015/image-nine.jpg) no-repeat center center;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  .lb-image-ten {
+    background: url(../img/lookbooks/spring-2015/image-ten.jpg) no-repeat center center;
+    background-attachment: fixed;
+    background-size: cover;
+  }          
 }
