--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -23,7 +23,7 @@ category:
 <h1 class="page-heading" style="display:none;">{{category.name}}</h1>
 
 {{{snippet 'categories'}}}
-<div class="page category-wrapper marg-top">
+<div class="page category-wrapper marg-top {{category}}">
     {{{category.description}}}
     <div class="container">
         <main class="page-content" id="product-listing-container">
