--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -25,7 +25,7 @@ blog:
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class='carousel-content fallwinter-2015 carousel-active'>
-            <a href="/collections/fall-winter/">
+            <a href="/fall-winter/">
                 <div class="fallwinter-banner">
                     <div class="slide-content">
                         <h2 class="league">The FW Collection!</h2>
@@ -39,7 +39,7 @@ blog:
         <div class='carousel-content shop-womens'>
             <div class="slide-content">
                 <h2 class="league">Women's</h2>
-                <div class="button slider-button collection"><a href="/collections/womens">Shop Now</a></div>
+                <div class="button slider-button collection"><a href="/womens">Shop Now</a></div>
             </div>
         </div>       
       </div>
@@ -47,7 +47,7 @@ blog:
         <div class='carousel-content shop-mens'>
             <div class="slide-content">
                 <h2 class="league">Men's</h2>
-                <div class="button slider-button collection"><a href="/collections/mens">Shop Now</a></div>
+                <div class="button slider-button collection"><a href="/mens">Shop Now</a></div>
             </div>              
         </div>
       </div>
@@ -62,7 +62,7 @@ blog:
     </a>
   </div>
 
-  <div class="row cta-wrapper hidden-xs">
+  <div class="row cta-wrapper">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
       <div class="cta-wrapper-one ">
         <div class="cta-inner cf">          
@@ -74,7 +74,7 @@ blog:
                       <div class="cta-image"></div>
                   </div>
                   <div class="col-sm-6 no-pad">
-                    <a href="/collections/womens/">
+                    <a href="/womens/">
                       <div class="cta-title">
                           <div class="inner-title">                           
                             <div class="top-hr"></div>
@@ -90,7 +90,7 @@ blog:
                   </div>
                   <div class="row bottom-cta cf">
                     <div class="col-sm-6 no-pad">
-                      <a href="/collections/mens/">
+                      <a href="/mens/">
                         <div class="cta-title">
                           <div class="inner-title">                           
                             <div class="top-hr"></div>
@@ -111,7 +111,7 @@ blog:
               </div>
             <div class="col-md-6 col-sm-12 no-pad">
                 <div class="cta-right ctas">
-                    <a href="/collections/fall-winter/">
+                    <a href="/fall-winter/">
                         <div class="cta-title">
                             <h2 class="open-s">The New<span class="league"> Fall/Winter Collection</span></h2>
                             <span class="view-more">view now</span>
@@ -133,7 +133,7 @@ blog:
 
   </div>
 
-  <div class="row cta-wrapper hidden-xs">
+  <div class="row cta-wrapper">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
       <div class="cta-wrapper-two ">
         <div class="cta-inner cf">          
