--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -24,6 +24,8 @@
 // Header
 @import "header/header";
 
+@import "mobile-nav";
+
 // Page
 @import "body/body";
 
@@ -45,9 +47,7 @@
 // Category Page Styles
 @import "category";
 
-<<<<<<< HEAD
-@import "lookbooks";
-=======
+
 // Category Page Styles
 @import "lookbooks";
 
@@ -57,7 +57,6 @@
 // Default Page Styles
 @import "about-us";
 
->>>>>>> 7a80c8c38057cdf8b2016e5325deee8b89a711e5
 
 // Page content layouts
 // -----------------------------------------------------------------------------
