--- a/assets/scss/layouts/_page.scss
+++ b/assets/scss/layouts/_page.scss
@@ -1,4 +1,9 @@
 .page {
-  top:4rem;
-  position: relative
+  margin:0;
+  margin:4rem 0 0;
+  position: relative;
+  .page-content {
+    padding-left:0;
+    padding-right:0;
+  }
 }
