--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -17,7 +17,6 @@
   position:fixed;
   top:0;
   z-index: 20;
-
   width: 100%;
   text-align: center;  
   height:10rem;
@@ -37,12 +36,9 @@
     padding-top: 10px;
     border:none;
     ul { 
-<<<<<<< HEAD
       line-height: 120px; 
       margin:0;
-=======
       line-height: 7; 
->>>>>>> 7a80c8c38057cdf8b2016e5325deee8b89a711e5
     }
     li {
       display:block; 
@@ -52,9 +48,9 @@
       background: none; 
       text-decoration: none; 
       color:#fff;
-      font-size: 18px;
+      font-size:1rem;
       font-weight: 400;
-      padding: 5px 12px;
+      padding: 0.50rem 0.5rem;
       text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.15);
       &:hover {
         color: #fec346;
@@ -67,7 +63,13 @@
         border-bottom:1px #fec346 solid;
       }
     }
-
+    .right-nav {
+      li {
+        &:last-child {
+          display: none;
+        }
+      }
+    }
   }  
 
 
@@ -75,11 +77,9 @@
     padding-left:20px;
     background:#000;
     display: none;
-
     li {
       padding: 0 0 0 5px; 
     }
-
   }
 
   .logo-wrap { 
@@ -98,9 +98,9 @@
     }
     img { 
       display: block; 
-      margin:0 auto; 
+      margin:1.5rem auto 0; 
       padding-bottom:5px; 
-      width: 18rem; 
+      width: 12rem; 
     }
   }  
   .sub-header {
@@ -113,11 +113,6 @@
     .social-links,
     .store-links {
       li {
-<<<<<<< HEAD
-        
-=======
-       
->>>>>>> 7a80c8c38057cdf8b2016e5325deee8b89a711e5
         float:left; 
         color:#fff;
         font-family: $league;
@@ -128,14 +123,11 @@
           &:hover {
             color:$gold;
           }
-<<<<<<< HEAD
         }
         .fa {
           &:hover {
             color:$gold;
           }
-=======
->>>>>>> 7a80c8c38057cdf8b2016e5325deee8b89a711e5
         }
       }
     }
@@ -143,24 +135,18 @@
       padding-left:1rem;
       float: left;
       li {
-<<<<<<< HEAD
         margin:0 0.3rem 0 0;
-=======
          margin:0 0.4rem 0 0;
         .fa {
           font-size:0.80rem;
         }
->>>>>>> 7a80c8c38057cdf8b2016e5325deee8b89a711e5
       }
     }
     .store-links {
       padding-right:1rem;
-<<<<<<< HEAD
       li {
         margin:0 0 0 0.3rem;
       }
-=======
->>>>>>> 7a80c8c38057cdf8b2016e5325deee8b89a711e5
       float: right;
        margin:0 0 0 0.5rem ;
     }
@@ -169,76 +155,23 @@
 
 
 
-
-
-//
-// Mobile Menu Toggle
-//
-// 1. Animate lines from 'x' to hamburger
-// -----------------------------------------------------------------------------
-
-.mobileMenu-toggle {
-    @include square($header-toggle-width);
-    display: inline-block;
-    font-size: 0;
-    left: 0;
-    overflow: hidden;
-    padding: 0 remCalc(18);
-    position: absolute;
-    z-index: zIndex("high");
-
-    @include breakpoint("medium") {
-        display: none;
+@media (min-width:1125px) {
+  .header {
+    .logo-wrap {
+      img {
+        margin-top:1rem;
+        width:15rem;
+      }
     }
-
-    .mobileMenu-toggleIcon,
-    .mobileMenu-toggleIcon::before,
-    .mobileMenu-toggleIcon::after {
-        background: $header-font-color;
-        content: "";
-        display: block;
-        height: 2px;
-        position: absolute;
-        transform: rotate(0deg);
-        transition: transform 100ms ease-in, top 100ms ease-in 150ms, bottom 100ms ease-in 150ms; // 1
-        width: remCalc(20);
-    }
-
-    .mobileMenu-toggleIcon {
-        top: remCalc(27);
-        transition: background-color 10ms ease-in 100ms;
-    }
-
-    .mobileMenu-toggleIcon::before {
-        top: -0.5rem;
-    }
-
-    .mobileMenu-toggleIcon::after {
-        bottom: -0.5rem;
-    }
-
-    &.is-open .mobileMenu-toggleIcon {
-        background-color: transparent;
-        transition-delay: 100ms;
-
-        // scss-lint:disable NestingDepth
-        &::before,
-        &::after {
-            background-color: $header-font-color;
-            bottom: auto;
-            top: auto;
-            transition: transform 100ms ease-in 150ms, top 100ms ease-in, bottom 100ms ease-in; // Animate lines from hamburger to 'x'
+    .main-nav {
+      .right-nav {
+        li {
+          &:last-child {
+            display: block;
+          }
         }
-
-        &::before {
-            top: 0;
-            transform: rotate(45deg);
-        }
-
-        &::after {
-            bottom: 0;
-            transform: rotate(-45deg);
-        }
-
+      }
     }
-}
+  }
+} 
+
