--- a/assets/scss/layouts/lookbooks/_fallwinter-2015-lookbook.scss
+++ b/assets/scss/layouts/lookbooks/_fallwinter-2015-lookbook.scss
@@ -1,56 +1,56 @@
-.summer-2015 {
+.fallwinter-2015-lookbook {
   .lb-image-one {
-    background: url(../../../summer-2015-image-one.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-one.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-two {
-    background: url(../../../summer-2015-image-two.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-two.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-three {
-    background: url(../../../summer-2015-image-three.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-three.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-four {
-    background: url(../../../summer-2015-image-four.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-four.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-five {
-    background: url(../../../summer-2015-image-five.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-five.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-six {
-    background: url(../../../summer-2015-image-six.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-six.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-seven {
-    background: url(../../../summer-2015-image-seven.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-seven.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-eight {
-    background: url(../../../summer-2015-image-eight.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-eight.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-nine {
-    background: url(../../../summer-2015-image-nine.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-nine.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }
   .lb-image-ten {
-    background: url(../../../summer-2015-image-ten.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-ten.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }        
   .lb-image-eleven {
-    background: url(../../../summer-2015-image-eleven.jpg) no-repeat center center;
+    background: url(../img/lookbooks/fall-winter-2015/image-eleven.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
   }    
