--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -10,6 +10,32 @@
                 {{>components/common/alert-success success}}
             {{/if}}
         {{/each}}
+        <div class="col-sm-12 col-md-6 product-details hidden-lg hidden-md">
+            <section class="productView-images" data-image-gallery>
+                <figure class="productView-image"
+                        data-image-gallery-main
+                        data-zoom-image="{{getImage product.main_image 'zoom' (cdn theme_settings.default_image_product)}}"
+                        >
+                    <a href="{{getImage product.main_image 'zoom' (cdn theme_settings.default_image_product)}}">
+                        <img src="{{getImage product.main_image 'product' (cdn theme_settings.default_image_product)}}" alt="{{product.main_image.alt}}" data-main-image>
+                    </a>
+                </figure>
+                <ul class="productView-thumbnails">
+                    {{#each product.images}}
+                        <li class="productView-thumbnail">
+                            <a
+                                class="productView-thumbnail-link"
+                                href="{{getImage this 'product' (cdn ../theme_settings.default_image_product)}}"
+                                data-image-gallery-item
+                                data-image-gallery-new-image-url="{{getImage this 'product' (cdn ../theme_settings.default_image_product)}}"
+                                data-image-gallery-zoom-image-url="{{getImage this 'zoom' (cdn ../theme_settings.default_image_product)}}">
+                                <img src="{{getImage this 'thumb' (cdn ../theme_settings.default_image_product)}}" alt="{{this.alt}}">
+                            </a>
+                        </li>
+                    {{/each}}
+                </ul>
+            </section>
+        </div>
         <div class="col-sm-12 col-md-6 product-details no-pad">
             <section class="productView-details">
                 <div class="productView-product">
@@ -289,7 +315,7 @@
 
   
         </div>
-        <div class="col-sm-12 col-md-6 product-details">
+        <div class="col-sm-12 col-md-6 product-details hidden-xs hidden-sm">
             <section class="productView-images" data-image-gallery>
                 <figure class="productView-image"
                         data-image-gallery-main
