--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -62,7 +62,7 @@ blog:
     </a>
   </div>
 
-  <div class="row cta-wrapper">
+  <div class="row cta-wrapper clearfix">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
       <div class="cta-wrapper-one ">
         <div class="cta-inner cf">          
@@ -133,7 +133,7 @@ blog:
 
   </div>
 
-  <div class="row cta-wrapper">
+  <div class="row cta-wrapper clearfix">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
       <div class="cta-wrapper-two ">
         <div class="cta-inner cf">          
@@ -154,7 +154,7 @@ blog:
                   <div class="col-sm-6 no-pad">
                       <div class="cta-image"></div>
                   </div>
-                  <div class="col-sm-6 no-pad">
+                  <div class="col-sm-6 col-xs-12 no-pad">
                     <a href="/collections/womens/">
                       <div class="cta-title">
                           <div class="inner-title">                           
@@ -170,7 +170,7 @@ blog:
                     </div>
                   </div>
                   <div class="row bottom-cta cf">
-                    <div class="col-sm-6 no-pad">
+                    <div class="col-sm-6 col-xs-12 no-pad">
                       <a href="/collections/mens/">
                         <div class="cta-title">
                           <div class="inner-title">                           
