--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -62,7 +62,7 @@ blog:
     </a>
   </div>
 
-  <div class="row cta-wrapper clearfix">
+  <div class="row cta-wrapper hidden-xs clearfix">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
       <div class="cta-wrapper-one ">
         <div class="cta-inner cf">          
@@ -103,7 +103,7 @@ blog:
                         </div>
                       </a>
                     </div>
-                    <div class="col-sm-6 no-pad">
+                    <div class="col-sm-6 col-xs-12 no-pad">
                       <div class="cta-image"></div>                                           
                     </div>
                   </div>
@@ -133,7 +133,7 @@ blog:
 
   </div>
 
-  <div class="row cta-wrapper clearfix">
+  <div class="row cta-wrapper hidden-xs clearfix">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
       <div class="cta-wrapper-two ">
         <div class="cta-inner cf">          
@@ -184,7 +184,7 @@ blog:
                         </div>
                       </a>
                     </div>
-                    <div class="col-sm-6 no-pad">
+                    <div class="col-sm-6 col-xs-12 no-pad">
                       <div class="cta-image"></div>                                           
                     </div>
                   </div>
