--- a/assets/scss/layouts/homepage/_homepage.scss
+++ b/assets/scss/layouts/homepage/_homepage.scss
@@ -102,7 +102,7 @@
   margin:0;
   .cta-wrapper-one,
   .cta-wrapper-two {
-    height:auto;
+    height:30rem;
     width: 100%;
   }
   .cta-inner,
@@ -478,12 +478,23 @@
     text-transform: uppercase; 
     margin:3rem 0 5rem;
   }
+  .productMasonry {
+    column-count:2;
+  }  
+}
+@media (min-width:750px) {
+  .home-page-products {
+    .productMasonry {
+      column-count:3;
+    }
+  }
 }
 
 @media (min-width:992px) { 
-  .home-wrapper {
-    .home-page-products {
-      padding:0 7%;
+
+  .home-page-products {
+    .productMasonry {
+      column-count:4;
     }
   }
   .cta-wrapper {
