--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -58,6 +58,13 @@
 @import "about-us";
 
 
+// Default Page Styles
+@import "cart";
+
+// Default Page Styles
+@import "about";
+
+
 // Page content layouts
 // -----------------------------------------------------------------------------
 
