--- a/templates/pages/account/inbox.html
+++ b/templates/pages/account/inbox.html
@@ -1,5 +1,5 @@
 {{#partial "page"}}
-
+<div class="container">
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 <h1 class="page-heading">{{lang 'account.messages.heading' }}</h1>
 {{> components/account/navigation account_page='messages'}}
@@ -18,6 +18,6 @@
         </section>
     </div>
 </main>
-
+</div>
 {{/partial}}
 {{> layout/base}}
