--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -11,6 +11,7 @@
             {{/if}}
         {{/each}}
         <div class="col-sm-12 col-md-6 product-details hidden-lg hidden-md">
+            <h1 class="productView-title m-title" {{#if schema}}itemprop="name"{{/if}}>{{product.title}}</h1>
             <section class="productView-images" data-image-gallery>
                 <figure class="productView-image"
                         data-image-gallery-main
@@ -39,7 +40,7 @@
         <div class="col-sm-12 col-md-6 product-details no-pad">
             <section class="productView-details">
                 <div class="productView-product">
-                    <h1 class="productView-title" {{#if schema}}itemprop="name"{{/if}}>{{product.title}}</h1>
+                    <h1 class="productView-title hidden-sm hidden-xs" {{#if schema}}itemprop="name"{{/if}}>{{product.title}}</h1>
 
                     <h2 class="productView-brand"{{#if schema}} itemprop="brand" itemscope itemtype="http://schema.org/Brand"{{/if}}>
                         <a href="{{product.brand.url}}"{{#if schema}} itemprop="url"{{/if}}><span{{#if schema}} itemprop="name"{{/if}}>{{product.brand.name}}</span></a>
