--- a/templates/pages/order-complete.html
+++ b/templates/pages/order-complete.html
@@ -1,7 +1,10 @@
 {{#partial "page"}}
 <main class="content">
-    <h1>Order Complete</h1>
-    <p>Your order is complete. How awesome is that!</p>
+  <div class="container">
+      <h1>Order Complete</h1>
+      <p>Your order is complete. How awesome is that!</p>
+  </div>
+
 </main>
 {{/partial}}
 {{> layout/base}}
