--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -13,7 +13,7 @@
           <div class="o-mnav-trigger hidden-md hidden-lg active" id="js-open-m-nav"><i class="fa fa-bars"></i></div>
           <div class="c-mnav-trigger" id="js-close-m-nav"><i class="fa fa-times"></i></div>
         </div>
-        <div class="shopping-cart"><a href="/cart"><i class="fa fa-shopping-cart"></i></a></div>
+        <div class="shopping-cart"><a href="/cart.php"><i class="fa fa-shopping-cart"></i></a></div>
           <div class="logo-wrapper header-item">
             <div class="logo-wrap">
               <a href="/">
