--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -86,6 +86,7 @@
 // Product view
 @import "products/productView";
 
+@import "/products/featured-products";
 // Account
 @import "account/account";
 
