--- a/assets/scss/layouts/_mobile-nav.scss
+++ b/assets/scss/layouts/_mobile-nav.scss
@@ -77,7 +77,8 @@
   .logo-wrap { 
     padding:0 35px;
     margin:15px 0 0;
-    text-align:center; 
+    text-align:center;
+    display: inline-block; 
     strong {
       display: block;
       color:#fdc145; 
