--- a/assets/scss/layouts/_category.scss
+++ b/assets/scss/layouts/_category.scss
@@ -153,7 +153,15 @@
   }
 
 }
-
+@media (min-width:750px) {
+  .category-wrapper {
+    .productGrid {
+      li {
+        width:50%;
+      }
+    }
+  }
+}
 @media (min-width:992px) {
   .category-wrapper {
 
@@ -184,7 +192,7 @@
     }
     .productGrid {
       li {
-       width: 25%;
+       width: 33.333%;
       }
     }
     .form-fieldset {
@@ -196,6 +204,15 @@
       }
       select {
         font-size:3rem;
+      }
+    }
+  }
+}
+@media (min-width:1170px) {
+  .category-wrapper {
+    .productGrid {
+      li {
+        width:25%;
       }
     }
   }
