--- a/assets/scss/layouts/homepage/_homepage.scss
+++ b/assets/scss/layouts/homepage/_homepage.scss
@@ -9,6 +9,7 @@
     margin-top:0;
   }
 }
+
 .home-wrapper {
   overflow: hidden;
   .home-page-products {
@@ -21,6 +22,36 @@
   }  
 }
 
+.home-banner {
+  width:100%;
+  height:80vh;
+  background: url(../img/banners/home-banner.jpg) no-repeat center center;
+  background-size: cover;
+  background-attachment: fixed;
+  position:relative;
+  a {
+    text-decoration:none; 
+  }
+  .slide-content {
+    position:absolute;
+    top:25%;
+    left:5%;
+    text-align: left;
+    h2 { 
+      white-space:nowrap; 
+      font-size:3.5rem; 
+      color:#000;
+      text-transform:uppercase; 
+    }
+    .collection { 
+      font-size:0.80rem;
+      padding:1rem; 
+      a {
+        color:#fff;
+      }
+    }      
+  }
+}
 .carousel {
   width:100%; 
   height:80vh; 
